<Cart&Checkout><Issue #112>: <Changed styling for both the cart and checkout, removed the background of both, added margin auto to checkout container. And for the cart I spaced out elements in the right side container, and added more padding to buttons on the cart items.><Did this so that the page looks better overall, and spacing is consistent to all views.>

--- a/frontend/main/components/SecureCheckout/SecureCheckout.css
+++ b/frontend/main/components/SecureCheckout/SecureCheckout.css
@@ -65,20 +65,17 @@
   display: flex;
   gap: 50px;
   padding: 40px;
-  background: #fff;
   border-radius: 8px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   max-width: 1200px;
   width: 100%;
-  margin-left: 15%;
-  margin-top: 3%;
+  margin-top: 100px !important;
+  margin: auto;
 }
 
 }
 
 .left-panel {
   width: 600px;
-
   padding-right: 30px;
   border-right: 1px solid #ddd;
   display: flex;
